# practice-mai

./: .gitignore  CMakeLists.txt  README.md  antenna_array.ipynb  benchmark.ipynb
lib/: antenna_array.cpp  antenna_array.hpp  complex.cpp  complex.hpp  sum.cpp  sum.hpp
link_python/: complex.py  main.py  util.py
python/: complex.py  main.py  util.py
src/: main.cpp
